changes on UserService.java