@@ -3,12 +3,14 @@ package softuni.bg.service;
 import org.modelmapper.ModelMapper;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.User;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import softuni.bg.model.FreelanceUserDetails;
 import softuni.bg.model.dtos.*;
 import softuni.bg.model.dtos.info.ContractInfoDTO;
+import softuni.bg.model.dtos.info.UserSchedulingDTO;
 import softuni.bg.model.entity.Contract;
 import softuni.bg.model.entity.JobListing;
 import softuni.bg.model.entity.Role;
@@ -57,12 +59,20 @@ public class UserService {
                 userRepository.existsByEmail(userRegistrationDTO.getEmail())) {
             throw new IllegalArgumentException("Username or Email already taken");
         }
+
         UserEntity userEntity = modelMapper.map(userRegistrationDTO, UserEntity.class);
         userEntity.setPassword(passwordEncoder.encode(userRegistrationDTO.getPassword()));
+
+
         Role role = roleRepository.findByName(roleName)
-                .orElseThrow(() -> new RuntimeException("Role not found"));
+                .orElseThrow(() -> new IllegalArgumentException("Role not found"));
+
+
         userEntity.getRoles().add(role);
+
+
         userRepository.save(userEntity);
+
     }
 
 
@@ -76,13 +86,19 @@ public class UserService {
     }
 
     public List<UserDTO> findAllUsers() {
-        return userRepository.findAll().stream()
-                .map(user -> modelMapper.map(user, UserDTO.class))
-                .collect(Collectors.toList());
+            return userRepository.findAll().stream()
+                .map(this::convertToDTO).toList();
     }
 
     public UserDTO convertToDTO(UserEntity userEntity) {
-        return modelMapper.map(userEntity, UserDTO.class);
+        UserDTO userDTO = modelMapper.map(userEntity, UserDTO.class);
+
+        // Manually mapping the roles
+        userDTO.setRoles(userEntity.getRoles().stream()
+                .map(Role::getName)
+                .collect(Collectors.toList()));
+
+        return userDTO;
     }
 
     @Transactional
@@ -110,35 +126,46 @@ public class UserService {
     public UserDTO findUserByUsername(String username) {
         Optional<UserEntity> userOptional = userRepository.findByUsername(username);
         if (userOptional.isPresent()) {
-            return modelMapper.map(userOptional.get(), UserDTO.class);
+            return convertToDTO(userOptional.get());
+//            return modelMapper.map(userOptional.get(), UserDTO.class);
         } else {
                    throw new RuntimeException("User not found with username: " + username);
         }
     }
 
-    public void save(UserDTO loggedUser) {
-        UserEntity map = modelMapper.map(loggedUser, UserEntity.class);
-        userRepository.save(map);
+    public void save(UserDTO userDTO) {
+        UserEntity userEntity = userRepository.findById(userDTO.getId())
+                .orElseThrow(() -> new RuntimeException("User not found with ID: " + userDTO.getId()));
+
+        // Update basic fields
+        userEntity.setFirstName(userDTO.getFirstName());
+        userEntity.setLastName(userDTO.getLastName());
+        userEntity.setEmail(userDTO.getEmail());
+        userEntity.setUsername(userDTO.getUsername());
+        userEntity.setImageUrl(userDTO.getImageUrl());
+
+        // Load and set roles from database to avoid transient issues, because I had a lot.
+        List<Role> roles = userDTO.getRoles().stream()
+                .map(roleName -> roleRepository.findByName(roleName)
+                        .orElseThrow(() -> new RuntimeException("Role not found: " + roleName)))
+                .collect(Collectors.toList());
+
+        userEntity.setRoles(roles);
+
+        userRepository.save(userEntity);
     }
 
 
-//    public List<JobListingDTO> getUserJobListings(Long userId) {
-//        UserEntity userEntity = userRepository.findById(userId)
-//                .orElseThrow(() -> new IllegalArgumentException("User not found"));
-//
-//        List<JobListing> jobListings = userEntity.getJobListings();
-//
-//        return jobListings.stream()
-//                .map(jobListing -> modelMapper.map(jobListing, JobListingDTO.class))
-//                .collect(Collectors.toList());
-//    }
 
-//    public Optional<FreelanceUserDetails> getCurrentUser() {
-//        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-//        if (authentication != null &&
-//                authentication.getPrincipal() instanceof FreelanceUserDetails freelanceUserDetails) {
-//            return Optional.of(freelanceUserDetails);
-//        }
-//        return Optional.empty();
-//    }
+
+    //SCHEDULING... NEEDED LOGIC
+    public List<UserSchedulingDTO> findAllUsersForScheduling() {
+        return userRepository.findAll().stream()
+                .map(this::convertToDTOForScheduling)
+                .toList();
+    }
+
+    private UserSchedulingDTO convertToDTOForScheduling(UserEntity user) {
+        return new UserSchedulingDTO(user.getId(), user.getUsername(), user.getEmail());
+    }
 }
